--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-
     "dev": "nodemon Backend/server.js"
   },
   "author": "",
@@ -15,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2"
   }
